Alignment done until 10 nadis chapter

--- a/alibindulager.tex
+++ b/alibindulager.tex
@@ -5870,7 +5870,8 @@ jñānayogaṃ samācaret\dd{}\begin{otherlanguage}{english}\coro{\uproman{22}.\
   \rdg[wit={N1,U1}]{śāvārakumbhalapallavaḥ}
   \rdg[wit={N2}]{śākhākumbhalapallavā}
   \rdg[wit={D}]{śālavākumapadṛtravā}}\dd{}\begin{otherlanguage}{english}\coro{\uproman{22}.\textsuperscript{\lowroman{5}}}\end{otherlanguage}\hskip-2pt\dd{}}
-\end{tlg}\vspace*{\fill}
+\end{tlg}%\vspace*{\fill}
+\ekdpb*{}
   \end{edition}
   \begin{translation}
   \ekddiv{type=trans}
@@ -5882,12 +5883,39 @@ jñānayogaṃ samācaret\dd{}\begin{otherlanguage}{english}\coro{\uproman{22}.\
       \blfootnote{\ldots in \citetitle{birch2013} 2.7-8. These verses precede or introduce \textit{śāmbhavī mudrā}. Here, tought, intellect and ego are taught the be the officiants, whereas the mind is the sacrificer who sacrifices the senses and the ten vitalbreaths into the orb of light (2.7). The orb of light (\textit{jyotimaṇḍala}) shines from the root (possibly the root of the body or spine, but \citeauthor[2013:286]{birch2013} suggests the palate) to the aperture at the top of the head. Practitioners of yoga should constantly meditate on it to achieve \textit{siddhi}s (2.8). (cittaṃ buddhir ahaṅkāra ṛtvijaḥ somapaṃ manaḥ | indriyāṇi daśa prāṇāñ juhoti jyotimaṇḍale || 7 || ā mūlād bilaparyantaṃ vibhāti jyotimaṇḍalam | yogibhiḥ satataṃ dhyeyam aṇimādyaṣṭasiddhidam || 8 ||)} Now the characteristic of Jñānayoga is explained.      
  \paragraph{\uproman{22}\textsuperscript{\lowroman{2}}.} He shall see the world as one, shining in all selves [of the world]. By the method of non-dualistic thinking he shall accomplish \textit{Jñānayoga}.
  \paragraph{\uproman{22}\textsuperscript{\lowroman{3}}.} Wherever one sees the all-knowing consciousness pervading the world, and who understands this with wisdom, possesses knowledge superior to that of mere learning.
- \paragraph{\uproman{22}\textsuperscript{\lowroman{4}}.} By always being totally directed towards non-duality, one attains the being of Śiva (\textit{śāmbhavī})\footnote{In medieval Yogatexts, particular in the Rājayoga genre, the term \textit{śāmbhavī} most often appears in the context of a \textit{mudrā}, the so-called \textit{śāṃbhavī mudrā}. The two earliest references for \textit{śāṃbhavī mudrā} are \textit{Candrāvalokana} 1 = \textit{Amanaska} 2.10, who share the same verse. The practice of \textit{śāṃbhavī mudrā} involves focusing the mind internally at an internal orb of light \citetitle{birch2013} 2.7-8. At the same time, the gaze is directed outwards and free from closing and opening the eyes citetitle{birch2013} (2.10). In \citetitle{birch2013} 2.14, the practice is said to bring about \textit{siddhi}s and the no-mind-state (\textit{unmani}) and according to citetitle{birch2013} 2.14 liberation while alive (\textit{jiivanmukti}). For a detailed discussion of \textit{śāṃbhavī mudrā}, its influence and all references, see \citeauthor[2013:71-79]. Here, Rāmacandra uses the term \textit{śāmbhavī} as a designation of the ultimate state to be attained by practicing Rājayoga, which presents itself as the realization of absolute unity. The \textit{śāmbhavī state} certainly has roots in the ancient tantric traditions of Śaivism. See references entry \textit{Tantriābhadhānakośa} Vol 3?}, just as the seed of the banyan tree\footnote{Regarding the banyan tree (\textit{nygarodha}) \citeauthor[1998:27]{smith1998} explains that in rituals, the Nyagrodha is assicoated with the \textit{kṣatriya} class (\citeauthor[1998:27]{smith1998}). This could be a renewed indication of the intended audience.} scattered in the ground becomes a tree.
+ \paragraph{\uproman{22}\textsuperscript{\lowroman{4}}.} By always being totally directed towards non-duality, one attains the being of Śiva (\textit{śāmbhavī})\footnote{In medieval Yogatexts, particular in the Rājayoga genre, the term \textit{śāmbhavī} most often appears in the context of a \textit{mudrā}, the so-called \textit{śāṃbhavī mudrā}. The two earliest references for \textit{śāṃbhavī mudrā} are \textit{Candrāvalokana} 1 = \textit{Amanaska} 2.10, who share the same verse. The practice of \textit{śāṃbhavī mudrā} involves focusing the mind internally at an internal orb of light \citetitle{birch2013} 2.7-8. At the same time, the gaze is directed outwards and free from closing and opening the eyes citetitle{birch2013} (2.10). In \citetitle{birch2013} 2.14, the practice is said to bring about \textit{siddhi}s and the no-mind-state (\textit{unmani}) and according to \citetitle{birch2013} 2.14 liberation while alive (\textit{jiivanmukti}). For a detailed discussion of \textit{śāṃbhavī mudrā}, its influence and all references, see \citeauthor[2013:71-79]{birch2013}. Here, Rāmacandra uses the term \textit{śāmbhavī} as a designation of the ultimate state to be attained by practicing Rājayoga, which he presents as the realization of absolute unity. The \textit{śāmbhavī}-state certainly has roots in the ancient tantric traditions of Śaivism. See references entry \textit{Tantriābhadhānakośa} Vol 3?}, just as the seed of the banyan tree\footnote{In rituals the banyan tree (\textit{nygarodha}) is assicoated with the \textit{kṣatriya} class (\citeauthor[1998:27]{smith1998}).} scattered in the ground becomes a tree.
  \paragraph{\uproman{22}\textsuperscript{\lowroman{5}}.} The absolute unity (\textit{ekāntaṃ}) is perceived not uniform by the self [as it is] made of ten parts. [Just as] the stems, branches, buds and leaves of the original shoot.
   \vfill
 \end{tlate}
 \end{translation}
 \end{alignment}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \begin{alignment}[
   texts=edition[class="edition"];
   translation[class="translation"],
@@ -6149,13 +6177,14 @@ darśanaṃ
 \app{\lem[wit={ceteri}]{na}
   \rdg[wit={N2,U2}]{\om}}
 karoti\dd{}\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{14}]}\end{otherlanguage}}\vspace*{\fill}
-    \end{prose}
+\end{prose}
+\ekdpb*{}
   \end{edition}
   \begin{translation}
     \ekddiv{type=trans}
     \begin{tlate}
       \paragraph{\uproman{22}\textsuperscript{\lowroman{6}}.} By virtue of its inherent nature, the branch of a tree with its new shoots (\textit{vistāra}), being the fruit of the flower of love, is in the seed. Certainly, that [the inherent nature?] is pure, eternal, unchanging, and immaculate.
-      \paragraph{\uproman{22}\textsuperscript{\lowroman{7}}.} One, not one, self-existing by it's own power, abiding in multiplicity, as five [gross] elements (\textit{tattva})\footnote{The term \textit{pañcatattva} in this verse refers to the five gross elements. The specific concept of the five gross elements emerging directly from the supreme god is found in other tantric works. A good example with a clear description of this concept can be seen in \citetitle{sivasvarodaya} 6-8. \begin{quote}
+      \paragraph{\uproman{22}\textsuperscript{\lowroman{7}}.} One, not one, self-existing by it's own power, abiding in multiplicity, as five [gross] elements (\textit{tattva})\footnote{The term \textit{pañcatattva} refers to the five gross elements. The concept of five gross elements emerging from a supreme god is found in some other tantric works, cf. e.g. \citetitle{sivasvarodaya} 6-8. \begin{quote}
 nirañjano nirākara eko devo maheśvaraḥ |\\
 tasmād ākāśam utpannam ākāśād vāyusambhavaḥ||6||\\
 vayos tejas tataś cāpas tataḥ pṛthvī samudbhavaḥ |\\
@@ -6163,14 +6192,13 @@ etāni pañcatattvāni vistīrṇāni ca pañcadhā ||7||\\
 tebhyo brahmāṇḍam utpannaṃ tair eva parivartate |\\
 vilīyate ca tatraiva tatraiva ramate punaḥ ||8|| \end{quote}
 \begin{quote}
-``Faultless and without body is the one god, the great supreme ruler. From him the ether element (\textit{ākāśa}) originated, and from the ether element the air element came into existance (6). From the air element, the fire element and from the fire element, the water element and from the water element, the earth element. These five elements unfold in a fivefold manner (7). From these five elements the universe has arisen, evolves and dissolves. [Then] right here, right there [it] enjoys again (8).''\end{quote}} thinking mind, intellect, illusion, individuation, and modifications (\textit{vikriyā}).\footnote{In the tantric traditions of Śaivism tenfold \textit{tattva}-systems existed from an very early age, cf. \citeauthor[2016:82-85]{goodall2016}. Rāmacandra, as can be seen in the sources of the edition for this \ldots}
+``Faultless and without body is the one god, the great supreme ruler. From him the ether element (\textit{ākāśa}) originated, and from the ether element the air element came into existance (6). From the air element, the fire element and from the fire element, the water element and from the water element, the earth element. These five elements unfold in a fivefold manner (7). From these five elements the universe has arisen, evolves and dissolves. [Then] right here, right there [it] enjoys again (8).''\end{quote}} thinking mind (\textit{manas}), intellect (\textit{buddhi}), illusion (\textit{māya}), individuation (\textit{ahaṃkāra}), and modifications (\textit{vikriyā}).\footnote{In the tantric traditions of Śaivism tenfold \textit{tattva}-systems existed \ldots.}
   \paragraph{\uproman{22}\textsuperscript{\lowroman{8}}.} Thus, the ten variations permeate the whole world and non-world. There is only one, there is no other. One who knows this is a knower of the truth."\\
 
 The mundane existance (\textit{saṃsāra}) exists in the form of stationary [existances] such as earth, tree mountains and so on. The mundane existance (\textit{saṃsāra}) [also] exists in the form of the mobile [existances] such as humans, animals, birds and so on.\textsuperscript{\coro{[\lowroman{10}]}} Now, whatever is the object of perception, it is called visible. Whatever is not seen by perception, it is called invisible. In this way, the realisation of unity (\textit{aikyena darśanam}) by eliminating the differentiation of the self from the mundane existance is truly Jnānayoga. Due to this, time does not bring about the destruction of the body.\textsuperscript{\coro{[\lowroman{14}]}}
     \end{tlate}
   \end{translation}
 \end{alignment}
-      \ekdpb*{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
@@ -6462,10 +6490,11 @@ kvacit pītā\dd{}
  \centerline{\textrm{\small{[\uproman{23}.\textsuperscript{\coro{\lowroman{1}-\lowroman{30}}}Division of the Inherent Being]}}}
           \bigskip
           \begin{tlate}
-\blfootnote{\noindent \ldots passage, is faithful to his template. However, the exact origin of this specific arrangement of \textit{tattva}s remains unknown. Usually \textit{vikriyā} is not a separate \textit{tattva}, but \textit{ahaṃkāravikrīya} (``transformations of \textit{ahaṃkāra}'') refers to lesser \textit{tattva}s like the \textit{jñānendrīya}s, \textit{karmendrīya}s and \textit{tanmātra}s. Here, it seems the term \textit{vikriyā} is taken as a \textit{tattva} on its own, functioning as a placeholder for the modifications of \textit{ahaṃkāra}.} Now, the division of the inherent being is described. Just as the seed of the banyan tree ripens into the shape of the banyan tree, [and] because of its own inherent being develops such a tenfold division. [Namely]: root, shoot, bark, branch, twig, bud, the unfolding flower, flower, fruit and nectar. The division develops [those] ten parts. In this way, the pure, unchanging, unblemished, attains such [a division] precisely, because of the inherent being of the self. [Namely], the division: earth, water, fire, wind, space, mind, intellect, illusion, transformations and form.\footnote{Add a note and explain various tenfold \textit{tattva}-systems.}\textsuperscript{\coro{[\lowroman{5}]}} Because of the power of Jñānayoga, there arises the conviction that "the self is truly one". Just as some particular soil (\textit{ekaika}) sometimes appears soft, sometimes appears beautiful, sometimes fragrant, sometimes unscented, sometimes golden, sometimes silver, is sometimes made of precious stone, sometimes appearing white, sometimes black, sometimes copper, sometimes yellow, \ldots
+\blfootnote{\noindent \ldots from an very early age, cf. \citeauthor[2016:82-85]{goodall2016}. Rāmacandra, as can be seen in the sources of the edition for this passage, is faithful to his template. However, the exact origin of this specific arrangement of \textit{tattva}s remains unknown. Usually \textit{vikriyā} is not a separate \textit{tattva}, but \textit{ahaṃkāravikrīya} (``transformations of \textit{ahaṃkāra}'') refers to lesser \textit{tattva}s like the \textit{jñānendrīya}s, \textit{karmendrīya}s and \textit{tanmātra}s. Here, it seems the term \textit{vikriyā} is taken as a \textit{tattva} on its own, functioning as a placeholder for the modifications of \textit{ahaṃkāra}.} Now, the division of the inherent being is described. Just as the seed of the banyan tree ripens into the shape of the banyan tree, [and] because of its own inherent being develops such a tenfold division. [Namely]: root, shoot, bark, branch, twig, bud, the unfolding flower, flower, fruit and nectar. The division develops [those] ten parts. In this way, the pure, unchanging, unblemished, attains such [a division] precisely, because of the inherent being of the self. [Namely], the division: earth, water, fire, wind, space, mind, intellect, illusion, transformations and form.\footnote{Add a note and explain various tenfold \textit{tattva}-systems.}\textsuperscript{\coro{[\lowroman{5}]}} Because of the power of Jñānayoga, there arises the conviction that "the self is truly one". Just as some particular soil (\textit{ekaika}) sometimes appears soft, sometimes appears beautiful, sometimes fragrant, sometimes unscented, sometimes golden, sometimes silver, is sometimes made of precious stone, sometimes appearing white, sometimes black, sometimes copper, sometimes yellow, \ldots
             \end{tlate}
   \end{translation}
 \end{alignment}
+\ekdpb*{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
@@ -6861,21 +6890,355 @@ What are the eight pleasures?\footnote{I was not able to allocate the source of 
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Bibliography}
- \label{sec:bibli}
-   \clearpage
-\newpage 
-\thispagestyle{empty}
-\quad  \addtocounter{page}{-1}
-
-\printbibliography[heading=subbibintoc, title=Consulted Manuskripts, keyword=codex]
-
-\printbibliography[heading=subbibintoc, title=Printed Editions, keyword=printsource]
-
-\printbibliography[heading=subbibintoc, title=Secondary Literature, keyword=seclit]
-
-\printbibliography[heading=subbibintoc, title=Online Sources, keyword=onlinesource]
-
-\end{document}
-
-
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+    \ekddiv{type=ed}
+    \begin{prose}
+%------------------------------
+%padṛsūtramayāni vasrāṇi//  \E
+%padasūtramayāni vastrāṇi?? \P %%%7643.jpg
+%paṭasūtrāmayāni vasrāṇi//  \B
+%paṭasūtrāmayāni vastrāṇi// \L
+%padṛsūtrayāni   vasrāṇi    \N1
+%padṛsūtrayāni   vasrāṇi    \D
+%padṛsūtrayāni   vasrāṇi    \N2
+%padṛsūtramayāni vasrāṇi    \U1
+%paṭasūtramayāni vasrāṇi    \U2
+%------------------------------
+%Clothes made from silk,...
+%------------------------------
+%paṃcasaptā dṛālikā         yuktāni harmyāṇi teṣu vāsaḥ    ativipulā  mṛdutarasukhāsuśayyā/     \E
+%paṃcasaptā dadhikā         yuktāni harmyāṇi teṣu cāsaḥ 2  ativipulā  mṛduttarachadavatīśayyā 2  \P
+%paṃcasatyā dātikā          yuktāni harmyāṇi teṣu vāstu    ativipulā  mṛdutaralāśayyā//2//        \B
+%paṃcasatyā dātikā          yuktāni harmyāṇi teṣu vāstu    ativipulā  mṛdutaralāśayyā//3//        \L
+%paṃca vā sapta vā dṛālikā  yuktāni harmyāṇi/              ativapulā  mṛdu/uttaracchaṃdavatīśayyā/  \N1
+%paṃca vā sapta vā dṛāṃlikā yuktāni harmyāṇi               ativapulā  mṛduuttarachaṃdavatīśayyā/     \D
+%paṃca vā sapta vā tālikā---yuktāni harmyāni               ativipulā  mṛduuttarachaṃdavatīśayyā    \N2
+%paṃca vā sapta vā dālikā---yuktāni harmyāṇi               ativipulāṃ mṛduuttarachadavatiśaiyyā     \U1
+%--------------------------saudhāni harmyāṇi vāsāya kecit// aṣṭau bhogān āha// sugrahaṃ// suvastraṃ// suśayā sustrī//  \U2
+%--------------------------------------------
+%,a site of the palace in which there are mainsions endowned with five or seven rooms. A huge, very soft and lovely bed.  
+%-------------------------------------------
+      \noindent
+      \note[type=source, labelb=147a, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 837): ātmāvivekam āgamya calac cittaṃ mahākulam | viṣayāndhatamo dṛṣṭvā no vetti paramātmanaḥ | amāyātmā tattvātītaḥ satsandhānavivarjitaḥ | sukhī duḥkhī janma mṛtyuṃ yāti satyaṃ punaḥ punaḥ | vairāgyādidhanaṃ tyaktvā viṣavad duḥkhakṛddhiyaḥ | koṭisūryasamātmeti jñānayogād vimucyate |}
+\app{\lem[type=emendation, resp=egoscr,alt={paṭṭa°}]{paṭṭa}
+  \rdg[wit={B,L,U2}]{paṭa°}
+  \rdg[wit={X,E}]{padṛ°}
+  \rdg[wit={P}]{pada°}
+}\app{\lem[wit={ceteri},alt={sūtra°}]{sūtra}
+  \rdg[wit={B,L}]{sūtrā}
+}\app{\lem[wit={ceteri}]{mayāni}
+  \rdg[wit={D,N1,N2}]{yāni}}
+\app{\lem[wit={P,L}]{vastrāṇi}
+  \rdg[wit={ceteri}]{vasrāṇi}} 1\dd{}
+\app{\lem[wit={X}]{paṃca vā sapta vā}
+  \rdg[wit={E,P}]{paṃcasaptā}
+  \rdg[wit={L,B}]{paṃcasatyā}}
+\app{\lem[type=emendation, resp=egoscr]{śālikā}
+  \rdg[wit={E,N1}]{dṛālikā}
+  \rdg[wit={D}]{dṛāṃlikā}
+  \rdg[wit={P}]{dadhikā}
+  \rdg[wit={B,L}]{dātikā}
+  \rdg[wit={N2}]{tālikā}
+  \rdg[wit={U1}]{dālikā}
+}\app{\lem[wit={ceteri}]{yuktāni}
+  \rdg[wit={U2}]{saudhāni}}
+harmyāṇi
+\app{\lem[wit={L,B}]{teṣu vāstu}
+  \rdg[wit={E}]{teṣu vāsaḥ}
+  \rdg[wit={P}]{teṣu cāsaḥ}
+  \rdg[wit={U2}]{vāsāya kecit}
+  \rdg[wit={ceteri}]{\om}} 2\dd{}
+\app{\lem[wit={ceteri}]{ativipulā}
+  \rdg[wit={D,N1}]{ativapulā}
+  \rdg[wit={U1}]{ativipulāṃ}
+  \rdg[wit={U2}]{aṣṭau bhogān āha ||}}
+\app{\lem[type=emendation, resp=egoscr,alt={mṛdūttara}]{mṛdūttara}
+  \rdg[wit={B,E,L,P}]{mṛdutara°}
+  \rdg[wit={X}]{mṛdu | uttara°}
+  \rdg[wit={U2}]{sugrahaṃ ||}
+}\app{\lem[wit={D,N1,N2},alt={°chandavatī°}]{chandavatī}
+  \rdg[wit={P}]{°chadavatī°}
+  \rdg[wit={U1}]{°chadavati°}
+  \rdg[wit={U2}]{suvastraṃ ||}
+}\app{\lem[wit={ceteri}]{śayyā}
+  \rdg[wit={U2}]{suśayā sustrī}} 3\dd{}
+%------------------------------
+%padminī tārūṇyavatī  manoharā guṇavatī  tatropaviṣṭā kāṃtā/      \E
+%padminī tārūṇyavatī  manoharā guṇavatī  tatopaviṣṭā  kāṃtā 4     \P
+%padminī tārūnyavatī  manoharā guṇavatī//tatrāpavistā kāṃtā 4     \B
+%padminī tārūnyavatī  manoharā guṇavatī//tatropavistā kāṃtā// 4// \L
+%padmanī tārūṇyavatī  manoharā guṇavatī  tatropavistā//           \N1
+%padminī tārūrāyavatī manoharā guṇavatī  tatropavistā//           \D
+%padminī tārūnyavatī  manoharā guṇavatī  tatropavistā             \N2
+%padminī tārūnyavati  manoharā guṇavati  tatropavistā             \U1
+%                                                                 \U2
+%--------------------------------------------
+%[On which] there is situated [tatropaviṣṭā] a lotus-like [em. zu tāruṇyavatī] youthful, charming and virtuous wife.
+%-------------------------------------------
+\app{\lem[wit={ceteri}]{padminī}
+  \rdg[wit={N1}]{padmanī}
+  \rdg[wit={U2}]{\om}}
+\app{\lem[type=emendation, resp=egoscr]{tāruṇyavatī}
+  \rdg[wit={ceteri}]{tārūṇyavatī}
+  \rdg[wit={N2}]{tārūrāyavatī}
+  \rdg[wit={U2}]{\om}}
+\app{\lem[wit={ceteri}]{manoharā guṇavatī}
+  \rdg[wit={U2}]{\om}}
+\app{\lem[wit={ceteri}]{tatropavistā}
+   \rdg[wit={P}]{tatopavistā}
+  \rdg[wit={B}]{tatrāpavistā}
+  \rdg[wit={U2}]{\om}}
+\app{\lem[wit={B,E,L,P}]{kāntā}
+  \rdg[wit={ceteri}]{\om}} 4\dd{}
+%------------------------------
+%sādhu āśanam/      atimūlyañ ca/         manoramam annaṃ।       tathā vidhaṃ pānam/   \E
+%sādhu āsanaṃ 5     atimūlo 'śvaḥ 6       manoramam annaṃ    7   tathā vidhaṃ pānaṃ 8  \P
+%sādhu āsanaṃ 5     atimūlyo asvaṃ//6     manoramyam attaṃ //7   tathā vidhapānaṃ//8   \B
+%sādhu āsanaṃ// 5// atimūlyo aśvaṃ//6//   manoramyam annaṃ //7// tathā vidhapānaṃ//8// \L
+%sādhyāsanaṃ//      amūlyo svaś ca//      manoramam attaṃ        tathā vidhaṃ pānaṃ/   \N1
+%sādhyāsanaṃ//      amūlyo svaś ca//      manoramam attaṃ        tathā vidhaṃ pānaṃ//  \D
+%sādhyāsanaṃ        amūlyo svaś ca        manotamam annaṃ        tathā vidhapānaṃ//    \N2
+%sādhyāsanaṃ        amolyo svaś ca        manoramam annaṃ        tathā vidhaṃ pānaṃ    \U1
+%sādhu āsanaṃ//           suśvaḥ//        suṣṭu annaṃ//          tathā vidhayānaṃ//    \U2
+%--------------------------------------------
+%good throne/seat; atimūlyo (überaus wertvolles) 'śvaṃ (Pferd), manorama ( die Sinne erfreuendes) Essen, verschiedenes Trinken. 
+%-------------------------------------------
+\app{\lem[type=emendation, resp=egoscr]{sādhvāsanaṃ}
+  \rdg[wit={E}]{sādhu āśanam}
+  \rdg[wit={B,L,P,U2}]{sādhu āsanaṃ}
+  \rdg[wit={D,N1,N2}]{sādhyāsanaṃ}} 5\dd{}
+\app{\lem[type=emendation, resp=egoscr]{atimūlyo 'śvaḥ}
+  \rdg[wit={E}]{atimūlyañ ca}
+  \rdg[wit={P}]{atimūlo 'śvaḥ}
+  \rdg[wit={B,L}]{atimūlyo asvaṃ}
+  \rdg[wit={X}]{amūlyo svaś ca}
+  \rdg[wit={U2}]{suśvaḥ}} 6\dd{}
+\app{\lem[wit={ceteri},alt={manoramam annaṃ}]{manoramam-annaṃ}
+  \rdg[wit={B}]{manoramyam attaṃ}
+  \rdg[wit={L}]{manoramyam annaṃ}
+  \rdg[wit={D,N1}]{manoramam attaṃ}
+  \rdg[wit={U2}]{suṣṭu annaṃ}} 7\dd{}
+tathā
+\app{\lem[wit={ceteri}]{vidhaṃ pānaṃ}
+  \rdg[wit={B,L,N2}]{vidhapānaṃ}
+  \rdg[wit={U2}]{vidhayānaṃ}} 8\dd{}
+%------------------------------
+%ete   ṣṭau bhogāḥ   kathitāḥ/   eke  duḥkhaṃ   bhajante/  bhikṣāṃ  yācante// kiñca \E
+%ete   ṣṭau bhogāḥ   kathitā 9   eke  duḥkha    bhajaṃte   bhikṣāṃ  yāṃcaṃte ca  \P
+%ete   ṣṭau bhogāḥ//             eka  duḥkhā    bhajaṃte/  bhikṣā   yāṃcate ca//  \B
+%ete   ṣṭau bhogāḥ//             eka  duḥkhā    bhajaṃte// bhikṣā   yāṃcate ca//  \L
+%ete  aṣṭau bhogā    kathyate/   eke  duḥkhaṃ   bhajaṃte/  bhikṣyāṃ yācate ca/   \N1
+%ete  aṣṭau bhogāḥ   kathyaṃte// ete  duḥkhaṃ   bhajaṃte/  bhikṣyāṃ yācaṃte ca// \D
+%ete  aṣṭau ghogā    kathyate//  ete  duḥkhataṃ bhajate    bhikṣāṃ  yācate ca//  \N2
+%rāte aṣṭau bhogāḥ   kathyate    ete  duḥkhaṃ   bhajate    bhikṣāṃ  pācate ca    \U1
+%ete  ṣṭau  bhogāḥ// kathitāḥ//  ekaṃ duḥkhaṃ   bhajaṃte// bhikṣā   yācaṃte ca// \U2
+%------------------------------
+%The eight enjoyments are being described. They impart suffering, and [make one] begging for their sustenance.
+%------------------------------
+%\note[type=philcomm, labelb=148, lem={'ṣṭau bhogāḥ}]{The eight enjoyments are not attested in any of the sources.}
+\app{\lem[wit={ceteri}]{ete}
+  \rdg[wit={U1}]{rāte}}
+\app{\lem[wit={Y}]{'ṣṭau}
+  \rdg[wit={X}]{aṣṭau}}
+\app{\lem[wit={ceteri}]{bhogāḥ}
+  \rdg[wit={N1,N2}]{bhogā}
+  \rdg[wit={U1}]{ghogā}}
+\app{\lem[wit={E,U2}]{kathitāḥ}
+  \rdg[wit={P}]{kathitā}
+  \rdg[wit={N1,N2,U1}]{kathyate}
+  \rdg[wit={D}]{kathyaṃte}
+  \rdg[wit={B,L}]{\om}}/
+\app{\lem[wit={D,N2,U1}]{ete}
+  \rdg[wit={E,P,N1}]{eke}
+  \rdg[wit={B,L}]{eka}
+  \rdg[wit={U2}]{ekaṃ}}
+\app{\lem[wit={D,E,N1,U1,U2}]{duḥkhaṃ}
+  \rdg[wit={P}]{duḥkha}
+  \rdg[wit={B,L}]{duḥkhā}
+  \rdg[wit={N2}]{duḥkhataṃ}}
+\app{\lem[wit={ceteri}]{bhajante}
+  \rdg[wit={N2,U1}]{bhajate}}/
+\app{\lem[wit={E,P,N2,U1}]{bhikṣāṃ}
+  \rdg[wit={D,N1}]{bhikṣyāṃ}
+  \rdg[wit={B,L,U2}]{bhikṣā}}
+\app{\lem[wit={ceteri}]{yācante}
+  \rdg[wit={P}]{yāṃcaṃte}
+  \rdg[wit={B,L}]{yāṃcate}
+  \rdg[wit={N2}]{yācate}
+  \rdg[wit={U1}]{pācate}}
+\app{\lem[wit={ceteri}]{ca}
+  \rdg[wit={E}]{kiñca}}/\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{25}]}\end{otherlanguage}}
+%------------------------------
+%      yathā sūryasya tejaḥ   dugdhasya    ghṛtam   agner jvalanaṃ viṣān mūrchā   tilāttailam/    vṛkṣāc-chāyā/  phalāt parimalaḥ       kāṣṭhād agniḥ    arkarādibhyo   madhuro rasaḥ/ \E
+%      yathā sūryasys tejaḥ   dugdhasya    ghṛtaḥ   agne dvāhaḥ    viṣān mūrchāti tilāttailaṃ     vṛkṣāt-chāyā   phalāsarimalaḥ         kāṣṭād  agniḥ    śarkvarādibhyo madhuro rasaḥ  \P
+%      yathā sūryasye tejāḥ   dugdha-------ghṛtaḥ   agne dvāhaḥ//  viṣān mūrchā   tilāttailaṃ//   vṛkṣā--chāyā   phalāsarimalaḥ         kaṣṭād  agniḥ    śarkadībhyo    madhuro  \B
+%      yathā sūryasya tejāḥ   dugdha-------ghṛtaḥ   agne dvāhaḥ//  viṣān mūrchā   tilātailaṃ//    vṛkṣā--chāyā   phalāt parimalaḥ       kaṣṭād  agniḥ    śarkadībhyo    madhuro  \L
+%      yathā sūryasya tejaḥ/  dugdhasya    ghṛtaṃ/  agne dahiḥ??   viṣān mūrchā   tilāttailaṃ,    vṛkṣāc-chāyā/  phalāt parimalaḥ/      kāṣṭhād āgniḥ/   śarkkarādibhyo madhuro rasaḥ/ \N1
+%      yathā sūryasya tejaḥ// dugdhasya    ghṛtaṃ// agne dadhiḥ    viṣān mūrchā   tilāttailaṃ//   vṛkṣā--chāyā// phalāt palātparimalaḥ//kāṣṭhād āgniḥ//  śarkarādibhyo  madhuro rasaḥ/ \D
+%      yathā sūryasya tejaḥ   dusya        ghṛtaṃ   agne dadhi     viṣān mūrchā   tilatailaṃ      vṛkṣā--chāyā   phalāt parimalaḥ       kāṣṭhād āgniḥ    śarkarādibhyo  madhuro rasaḥ/ \N2
+%      yathā sūryaśca tejaḥ   dugdhasy     ghṛttaṃ  agne dārhaṃ    viṣāt mūrchā   tilātailaṃ      vrakṣā-chāyā   phalāt parimalaḥ       kāṣṭhād āgniḥ    śarkarādibhyo  madhuro rasaḥ \U1
+%      yathā sūryasya tejaḥ// dugdhasya    ghṛtaṃ// agne dāhiḥ//   viṣān mūrchā   tilātailaṃ//    vṛkṣā--chāyā// phalāt parimalaḥ//     kāṣṭād  agniḥ    śarkarādibhyo  madhuro rasaḥ// \U2
+%------------------------------
+%Gleichwie die Strahlen der Sonne, die Butter der Milch, das Brennen des Feuers, die Betäubung aufgrund von Gift, das Sesamöl aus dem Sesamkorn, der Schatten vom Baum, der Wohlgeruch von einer Frucht, das Feuer von einem Holzscheid, der Süße Saft [em. zu śārkara] a liquor prepared from Dhātakī with sugar] und so weiter,   
+%------------------------------
+%Like the rays of the sun, the butter of milk, the burning of fire, the stupor of poison, the sesame oil from the sesame seed, the shade from the tree, the sweet odor from a fruit, the fire from a scabbard, the sweet sap [em . to śārkara] a liquor prepared from Dhātakī with sugar] and so on,
+%------------------------------
+\note[type=source, labelb=149, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 837): ravī tejo ghṛtaṃ dugdhe tile tailaṃ svabhāvataḥ | śaśam indau kule śākhaṃ kṣāre ca lavaṇaṃ yathā | tathā brahmaṇi saṃsāro hyakhaṇḍaparipūrvake |}
+yathā
+\app{\lem[wit={ceteri}]{sūryasya}
+  \rdg[wit={U1}]{sūryaś ca}}
+\app{\lem[wit={ceteri}]{tejaḥ}
+  \rdg[wit={B,L}]{tejāḥ}}\dd{}
+\app{\lem[wit={D,E,P,N1,U2}]{dugdhasya}
+  \rdg[wit={B,L}]{dugdha°}
+  \rdg[wit={N2}]{dusya}
+  \rdg[wit={U1}]{dugdhasy}}
+\app{\lem[wit={ceteri}]{ghṛtaṃ}
+  \rdg[wit={B,L,P}]{ghṛtaḥ}}\dd{}
+\app{\lem[wit={E}, alt={agner}]{agne\skp{r-dā}}
+  \rdg[wit={ceteri}]{agne}
+}\app{\lem[type=emendation, resp=egoscr, alt={dāhaḥ}]{\skm{r-dā}haḥ}
+  \rdg[wit={B,L,P}]{dvāhaḥ}
+  \rdg[wit={N1}]{dahiḥ}
+  \rdg[wit={N2}]{dadhi}
+  \rdg[wit={D}]{dadhiḥ}
+  \rdg[wit={U1}]{dārhaṃ}
+  \rdg[wit={U2}]{dāhiḥ}
+  \rdg[wit={E}]{jvalanaṃ}}\dd{}
+\app{\lem[wit={ceteri},alt={viṣān}]{viṣā\skp{n-mū}}
+  \rdg[wit={U1}]{viṣāt}
+}\skm{n-mū}rchā\dd{}
+\app{\lem[wit={ceteri},alt={tilāt}]{tilā\skp{t-tai}}
+  \rdg[wit={P}]{titilāt}
+  \rdg[wit={N2}]{tila}
+  \rdg[wit={U1}]{tilā}
+}\skm{t-tai}laṃ\dd{}
+\app{\lem[wit={E,N1}, alt={vṛkṣāt}]{vṛkṣā\skp{c-chā}}
+  \rdg[wit={P}]{vṛkṣāt}
+  \rdg[wit={B,D,L,N2,U2}]{vṛkṣā}
+  \rdg[wit={U1}]{vrakṣā}
+}\skm{c-chā}yā\dd{}
+\app{\lem[wit={ceteri},alt={phalāt}]{phalā\skp{t-pa}}
+  \rdg[wit={B,L}]{phalā}
+}\app{\lem[wit={ceteri},alt={parimalaḥ}]{\skm{t-pa}rimalaḥ}
+  \rdg[wit={B,L}]{sarimalaḥ}
+  \rdg[wit={D}]{palāt parimalaḥ}}\dd{}i%\note[type=philcomm, labelb=150, lem={parimalaḥ}]{Clarification: Witness \getsiglum{D} reads \textit{phalāt palāt parimala}.}
+\app{\lem[wit={ceteri}, alt={kāṣṭhād}]{kāṣṭhā\skp{d-a}}
+  \rdg[wit={P,U2}]{kāṣṭād}
+  \rdg[wit={B,L}]{kaṣṭād}
+}\app{\lem[wit={ceteri}, alt={agniḥ}]{\skm{d-a}gniḥ}
+  \rdg[wit={D,N1,N2,U1}]{āgniḥ}}\dd{}
+\app{\lem[type=emendation, resp=egoscr]{śārkarādibhyo}
+  \rdg[wit={E}]{arkarādibhyo}
+  \rdg[wit={P}]{śarkvarādibhyo}
+  \rdg[wit={L,B}]{śarkadībhyo}}
+madhuro
+\app{\lem[wit={ceteri}]{rasaḥ}
+  \rdg[wit={B,L}]{\om}}\dd{}
+%------------------------------
+%himānībhyaḥ   śītam      ityādipadārthānāṃ svabhāvaḥ         tathā    saṃsāro'pi parameśvarasvarūpamadhye      tiṣṭhati/ \E
+%himānībhyaḥ   śītaṃ      ityādipadārthasvabhāva        eva   tathā    saṃsāro'pi parameśvarasvarūpamadhye      tiṣṭhati \P
+%sahīmānībhyaḥ śītaḥ/     ityādipadārthāsvabhāvataḥ// eva     tathā    saṃsāro pi paremesvara svarūpasya madhye tiṣṭhatī/ \B
+%sahimānibhyaḥ śītaḥ//    ityādiphadārthāḥ svabhāvataḥ// eva  tathā    saṃsāro pi paremesvara svarūpasya madhye tiṣṭhati// \L
+%himānibhyaḥ   śaityāṃ    ityādipadārthasvabhāva evā/         tathā    saṃsāro pi parameśvarasvarūpamadhye      tiṣṭhati// \N1
+%himānibhyaḥ   śaityaṃ // ityādipadārthasvabhāva eva//        tathā    saṃsāro pi parameśvarasvarūpamadhye      tiṣṭhati// \D 
+%himānitpa     śaityāś    atyādipadārtharthasvabhāva eva//    tathā    saṃsāro pi parameśvarasvarūpamadhye      tiṣṭhati \N2
+%himānībhyaḥ   śaityaṃ    ityādipadārthasvabhāvaḥ ravaḥ?      tathā vā saṃsāro pi parameśvararūpamadhye         tiṣṭhati/ \U1
+%himānībhyaḥ   śītyaṃ//   ityādipadārthāsvabhāva eva//        tathā    saṃsāro pi parameśvarasvarūpamadhye      tiṣṭhaṃti// \U2
+%------------------------------
+%die Kälte von Schneehaufen, und so weiter ist das inhärente Wesen der Dinge. IN gleicher Weise befindet sich auch der Weltengang im Zentrum der eigenen Gestalt von höchsten Gott.
+%the cold of piles of snow, and so on is the inherent essence of things. In the same way, the course of the world is also in the center of the highest God's own form. 
+%------------------------------
+\app{\lem[wit={ceteri}]{himānībhyaḥ}
+  \rdg[wit={B,L}]{sahimānibhyaḥ}
+  \rdg[wit={N2}]{himānitpa}}
+\app{\lem[wit={D,U1}]{śaityaṃ}
+  \rdg[wit={N1}]{śaityāṃ}
+  \rdg[wit={U2}]{śītyaṃ}
+  \rdg[wit={N2}]{śaityāś}
+  \rdg[wit={E,P}]{śītaṃ}
+  \rdg[wit={B,L}]{śītaḥ}}\dd{}
+\app{\lem[wit={D,N1,P}]{ityādipadārthasvabhāva}
+  \rdg[wit={U2}]{ityādipadārthā°}
+  \rdg[wit={B}]{ityādipadārthāsvabhāvataḥ}
+  \rdg[wit={N2}]{atyādipadārtharthasvabhāva}
+  \rdg[wit={U1}]{ityādisvabhāvaḥ}
+  \rdg[wit={L}]{ityādiphadārthāḥ svabhāvataḥ}
+  \rdg[wit={E}]{ityādipadārthānāṃ svabhāvaḥ}}
+\app{\lem[wit={ceteri}]{eva}
+  \rdg[wit={N1}]{evā}
+  \rdg[wit={U1}]{ravaḥ}
+  \rdg[wit={E}]{\om}}\dd{}
+\app{\lem[wit={ceteri}]{tathā}
+  \rdg[wit={U1}]{tathā vā}}
+saṃsāro'pi
+\app{\lem[wit={ceteri}]{parameśvarasvarūpamadhye}
+  \rdg[wit={B,L}]{paremesvara svarūpasya madhye}
+  \rdg[wit={U1}]{parameśvararūpamadhye}}
+\app{\lem[wit={ceteri}]{tiṣṭhati}
+  \rdg[wit={B}]{tiṣṭhatī}
+  \rdg[wit={U2}]{tiṣṭhaṃti}}\dd{}
+%------------------------------
+%parameśvaro 'khaṇḍa--paripūrṇaḥ/  \E
+%parameśvaro khaṃḍa---paripūrṇaś ca    \P
+%parameśvaro khaṃḍa---paripūrṇaś ca// \B
+%parameśvaro khaṃḍa---paripūrṇaś ca//  \L
+%parameśvaro 'ṣaṃḍa---paripūrṇaś ca//  \N1
+%parameśvaro  ṣaṃḍa---paripūrṇaś ca//  \D %%%S.9 verso
+%parameśvaro yarāṇḍa--paripūrṇaś ca//  \N2
+%parameśvaro khaṃḍaḥ  paripūrṇaś ca   \U1 %%%277.jpg
+%parameśvaro 'khaṃḍa--paripūrṇaś ca//   \U2
+%------------------------------
+%Und der höchste Gott ist unteilbar und das All erfüllend.
+%And the Most High God is indivisible and all-filling.
+%------------------------------
+parameśvaro\app{\lem[wit={ceteri}, alt={'khaṇḍa°}]{'khaṇda}
+  \rdg[wit={D,N1}]{'ṣaṃḍa°}
+  \rdg[wit={N2}]{yarānda°}
+  \rdg[wit={U1}]{khaṃḍaḥ}
+}\app{\lem[wit={ceteri},alt={°paripūrṇaś ca}]{paripūrṇaś\skp{-}ca}
+  \rdg[wit={E}]{paripūrṇaḥ}}\dd{}\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{30}]}\end{otherlanguage}}\vfill
+\end{prose}
+  \end{edition}
+  \begin{translation}
+    \ekddiv{type=trans}
+    \begin{tlate}
+      \noindent
+  1. Clothes made from silk;\footnote{Within the twenty \textit{upabhoga}s of the \textit{Mānasollāsa} we find the interesting topic of \textit{Vastropabhoga} or the ``enjoyment of garments''. Particularly in summer, the king is asked to wear silk or cotton clothes which are thin and charming (\citeauthor[1939:14]{manasollasa}).} 2. A site of the palace in which there are mainsions endowned with five or seven rooms.\footnote{The first \textit{adhyāya} of the third \textit{viṃśati} of the \textit{Mānasollāsa} discusses astrology for finding out auspicious moments while building new houses for princes. Here houses with one to four \textit{śālā}s are described (\citeauthor[1939:6-7]{manasollasa}).} 3. A huge, very soft and lovely bed;\footnote{This is found as \textit{Śayyābhoga} within the \textit{Mānasollāsa}. In this section, seven kinds of beds and eight kinds of bed-steads are described (\citeauthor[1939:21]{manasollasa}).} 4. [on which] there is seated a lotus-like youthful, charming and virtuous wife;\footnote{This is resembled as \textit{yosidupabhoga} within the \textit{Mānasollāsa}. In this chapter, King Someśvara describes the qualifications of women whom a king should marry. The two most important qualities he gives are beauty and full youth. Out of the four kinds of women: a) Padminī, b) Citriṇī, c) Śaṅkhinī, and d) Hastinī. He suggests that the latter two kinds are not worth enjoying (\parencite[21]{manasollasa}).} 5. An excellent throne;\footnote{The \textit{āsanopabhoga} or ``the enjoyment of seats'' within the \textit{Mānasollāsa} describe various kinds of royal seats (\citeauthor[1939:15]{manasollasa}).} 6. An exceptional valuable horse;\footnote{This is resembled as \textit{yānopabhoga} within the \textit{Mānasollāsa}. In this chapter, King Someśvara lists nine kinds of vehicles, including horses (\citeauthor[1939:24]{manasollasa}).} 7. Food that pleases the senses;\footnote{This is resembled as \textit{annabhoga} within the \textit{Mānasollāsa}. In this section, King Someśvara describes the names of various kinds of great food and the directions as to the preparations of various dishes (\citeauthor[1939:21]{manasollasa}).} 8. Various drinks.\footnote{This is resembled as \textit{pānīyabhoga} within the \textit{Mānasollāsa}. In this chapter everything related to drinking and drinks is described (\citeauthor[1939:23]{manasollasa}). Instead of following his template closely, Rāmacandra modifies the meaning of the passage. The original ideal of his sources text which emphasizes renunciation and detachment to wealth is weakened by the introduction of the eight pleasures. Instead of radically abandoning wealth, he just states that they cause suffering and craving, as we can \ldots}\hfill \break 
+The eight enjoyments are described. They impart suffering, and [make one] begging for their sustenance.\textsuperscript{\coro{[\lowroman{25}]}}
+Like the rays of the sun, the butter of milk, the burning of fire, the stupor of poison, the sesame oil from the sesame seed, the shade from the tree, the sweet odor from a fruit, the fire from a scabbard, the sweet sap of Śārkara\footnote{A liquor prepared from Dhātakī with sugar. Beleg?!} and so on, the cold of piles of snow, and so on is the inherent essence of things. In the same way, the course of the world is also in the center of the highest God's own form. And the highest God is indivisible and all-filling.\textsuperscript{\coro{[\lowroman{30}]}}
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+\ekdpb*{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
