--- a/bindu.bib
+++ b/bindu.bib
@@ -27,6 +27,34 @@
   keywords={printsource},
 }
 
+@book{fausta1976,
+title={Das Gorakṣaśataka},
+author={Gorakṣanātha},
+editor={Nowotny, Fausta}, 
+series={Band 3 von Dokumente der Geistesgeschichte},
+publisher={K.A. Nowotny},
+year={1976},
+address={Köln},
+}
+
+@book{hatharatnavali, 
+title={Haṭharatnāvalī},
+subtitle={Haṭharatnāvalī of Śrīnivāsayogī}, 
+editor={Gharote, M.L. and Devnath P. and Jha, V.K.}, 
+year={2002},
+publisher={Lonavla Yoga Institute}, 
+address={Lonavla},
+}
+
+@book{yuktabhavadeva, 
+title={Yuktabhavadeva},
+subtitle={Yuktabhavadeva of Bhavadeva Miśra,}, 
+editor={Gharote, M.L. and Jha, V.K.}, 
+year={2002},
+publisher={Lonavla Yoga Institute}, 
+address={Lonavla},
+}
+
 @book{sarvangayoga,
   title={Sarvāṅgayogapradīpikā},
   subtitle={Sarvāṅgayogapradīpikā in the Sundargranthāvalī},
@@ -36,6 +64,15 @@
   address={Delhi},
   keywords={printsource},
 }
+
+@book{yogacintamani,
+ title={Yogacintāmaṇi (Śivānandasarasvatī)},
+ editor={Śarma, Haridās},
+ year={no date of publication},
+ publisher={Calcutta Oriental Press},
+ address={Calcutta},
+ keywords={printsource},
+ }
 
 @book{sivasvarodaya,
   title={Śivasvarodaya},
@@ -111,6 +148,28 @@ vārttikamarīcibhiḥ sahitaḥ},
   publisher={Brill},
   keywords={printsource},
 }
+
+@book{hathapradipika2024,
+  title={Haṭhapradīpikā},
+  subtitle={Light on Haṭha: Haṭhapradīpikā - Critical Edition and annotated Translation (Forthcoming)},
+  editor={Mallinson, James and Birch, Jason and Hanneder, Jürgen and Demoto-Hahn, Mitsuyo and Liersch, Nils Jacob},
+  year={2024},
+  note={forthcoming}, 
+  address={Marburg and London},
+  publisher={Indica et Tibetica},
+  keywords={printsource},
+}
+
+
+
+@book{yajnavalkya,
+  title={Yogayājñavalkya},
+  editor={Mohan, A. G. and Mohan, Ganesh},
+  year={2013},
+  publisher={Svastha Yoga Pte Ltd.},
+  keywords={printsource},
+}
+
 
 @book{kumbhaka, 
   title={Kumbhakapaddhati},
@@ -902,6 +961,32 @@ Sound},
     keywords={printsource},
 }
 
+@book{encyclopediaasana,
+    title={Encyclopedia of Traditional Asanas},
+    editor={Gharote, Dr. M. L. and Jha, Dr. V. K. and Devnath, Dr. Parimal and Sakhalkar, Dr. S. B.},
+    year={2006},
+    publisher={The Lonavla Yoga Institute (India)},
+    address={Lonavla},
+    keywords={seclit},
+}
+
+@book{sardha,
+title={Sārddhatriśatikālottara},
+editor={Bhatt, N.R.},
+year={1979},
+publisher={Institute Francise De Pondicherry},
+address={Pondicherry},
+}
+
+@book{yuktabhavadeva,
+    title={Yuktabhavadeva},
+    subtitle={Yuktabhavadeva of Bhavadeva Miśra}, 
+    editor={Gharote, M. L. and Jha, V. K.}, 
+    year={2002},
+    publisher={The Lonavla Yoga Institute (India)},
+    address={Lonavla},
+    keywords={printsource},
+}
 
 @book{rudrayamala1937,
     title={Rudrayamalam: uttara-tantram},
@@ -924,6 +1009,17 @@ Sound},
     editor={Śrī Pandita Muralidhara Jhā},
     year={1901},
     publisher={Prabhakari and Co. Banaras},
+    %url={http://muktalib5.org/DL_CATALOG/TEXTS/ETEXTS/purascaryaarnava-I-DEV.pdf},
+    keywords={printsource},
+}
+
+@book{vasisthasamhita,
+    title={Vasiṣṭḥasaṃhitā},
+    editor={Digambarji, Swami and Maheshananda, Swami and Sharma, B.R. and Sahay, R.K. and Bodhe E.K.},
+    note={revised edition}, 
+    year={2005},
+    publisher={Kaivalyadhāma Śrīmanmādhav Yogamandir Samiti},
+    address={Lonavla}, 
     %url={http://muktalib5.org/DL_CATALOG/TEXTS/ETEXTS/purascaryaarnava-I-DEV.pdf},
     keywords={printsource},
 }
@@ -963,6 +1059,14 @@ Sound},
    %author={Unbekannt},
    address={National Archives Kathmandu},
    note={NAK MS 3–370, NGMPP Reel No.A 42/6. Palm-leaf, Newari Script},
+   keywords={codex},
+}
+
+@codex{vivekamartandaold,
+   title={Vivekamārtaṇḍa},  
+   author={Gorakṣa},
+   address={Central Library, Baroda},
+   note={Acc. No. 4110},
    keywords={codex},
 }
 
@@ -1180,6 +1284,12 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    keywords={codex},
 }
 
+@codex{hathacandrika,
+   title={Haṭhasaṅketacandrikā},
+   note={Ms. No. 2244},
+   address={Man Singh Pustak Prakash Library, Jodhpur}, 
+   keywords={codex},
+}
 
 @codex{shambuvadana,
    title={Śambūkāvadāna},
@@ -1273,6 +1383,29 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    keywords={printsource},
 }
 
+@book{brhadaranyaka,
+   title={Bṛhadāraṇyakopaniṣat},
+   subtitle={with the \textit{bhāṣya} attributed to Śaṅkara}},
+   year={1986},
+   editor={Shastri, Subrahmanya},  
+   publisher={Mahesh Research Institute},
+   address={Varanasi},
+   keywords={printsource},
+}
+
+@book{yogakundalinyopanisad,
+   title={Yogakuṇḍalinyopaniṣad},
+   note={see Yoga Upaniṣads}, 
+   keywords={printsource},
+}
+
+@book{dhyanabind,
+   title={Dhyānabindopaniṣad},
+   note={see Yoga Upaniṣads}, 
+   keywords={printsource},
+}
+
+
 @book{nadabindu,
    title={Nādabindūpaniṣat},
    note={Cf. Yoga Upaniṣads}, 
@@ -1309,6 +1442,27 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    publisher={Brill},
    address={Leiden},
    keywords={printsource},
+}
+
+@book{schmidtnachtrag,
+title={Nachträge zum Sanskrit-Wörterbuch in kürzerer Fassung von Otto Böhtlingk},
+author={Schmidt, Richard},
+year={1928},
+publisher={Motilal Banarsidass},
+address={Delhi},
+} 
+
+@book{stupa,
+   title={The Symbolism of the Stupa},
+   author={Snodgrass, Adrian},
+   series={Synthesis},
+   volume={22}, 
+   pages={360-377}, 
+   year={1988},
+   publisher={Cornell University Press},
+   address={Ithaca, NY},
+   url={https://doi.org/10.7591/9781501718960-025}, 
+   keywords={seclit},
 }
 
 @book{yogabija,
